--- a/package.json
+++ b/package.json
@@ -13,14 +13,15 @@
     "express": "^4.16.4",
     "install": "^0.12.2",
     "jsdom": "^13.2.0",
+    "nodemon": "^1.18.10",
     "npm": "^6.7.0",
-    "readability": "git+ssh://git@github.com/mozilla/readability.git",
+    "readability": "https://github.com/mozilla/readability",
     "request-promise-native": "^1.0.5",
+    "whatwg-encoding": "^1.0.5",
     "winston": "^3.2.1"
   },
   "devDependencies": {
     "jest": "^24.1.0",
-    "nodemon": "^1.18.10",
     "spy": "^1.0.0",
     "superagent": "^4.1.0",
     "supertest": "^3.4.2"
